[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apoc"
version = "0.12.0"
description = "Accelerated Pixel and Object Classifiers based on OpenCL"
readme = "README.md"
license = { text = "BSD" }
authors = [
    { name = "haesleinhuepf", email = "robert.haase@tu-dresden.de" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy<2.0",
    "scikit-learn>=0.24.2,<1.4.0",
    "pyclesperanto",
    "pandas>=2.0.0",
    "scikit-image>=0.22.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/haesleinhuepf/apoc"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"
testpaths = ["tests"]
pythonpath = ["."]